# my_mdspan

./: CMakeLists.txt  README.md
.claude/: CLAUDE.md
cuda/: matmul.cu  matmul.hpp  tensor_ref.hpp  test_matmul.cu
include/my_mdspan/: accessor_default.hpp  device.hpp  dispatch.hpp  extents.hpp  layout_left.hpp  layout_right.hpp  layout_stride.hpp  mdarray.hpp  mdspan.hpp  ops.hpp  submdspan.hpp
tests/: test_dispatch.cpp  test_extents.cpp  test_layout.cpp  test_layout_stride.cpp  test_mdarray.cpp  test_mdspan.cpp  test_ops.cpp  test_submdspan.cpp
